--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "meeting-cost-calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://axlbert.github.io/meeting-cost-calculator/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
